# wiki-agent

./: .env.example  .gitignore  CLAUDE.md  README.md
agent/: .env.example  README.md  pyproject.toml
agent/tests/: test_agent.py  test_cache.py  test_cli.py  test_demos.py  test_ratelimit_bench.py  test_trajectory.py  test_wikipedia.py
agent/wiki_agent/: __init__.py  agent.py  cache.py  cli.py  config.py  ratelimit_bench.py  trajectory.py  wikipedia.py
agent/wiki_agent/demos/: 00.json  01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  __init__.py  player.py  questions.py  record.py
docs/: hill-climbing-report.md
docs/superpowers/notes/: 2026-06-21-frames-model-tuning.md
docs/superpowers/plans/: 2026-06-21-demo-mode-and-live-animation.md  2026-06-21-eval-trajectory-transcript.md  2026-06-21-frames-retrieval-grounding.md  2026-06-21-multilingual-qa-benchmark.md  2026-06-21-wikiagent-abstention-benchmark.md  (+2 more)
eval/: .env.example  README.md  pyproject.toml  run_pinned.py
eval/scripts/: analyze_run.py  build_frames.py
eval/tests/: test_abstention.py  test_analyze_multilingual.py  test_analyze_runs.py  test_grounding.py  test_multilingual_dataset.py  test_multilingual_scorers.py  test_multilingual_tasks.py  test_render.py  test_scorers.py  test_solver.py  test_tasks.py
eval/wiki_eval/: __init__.py  analyze_multilingual.py  analyze_runs.py  config.py  render.py  scorers.py  solver.py  tasks.py
eval/wiki_eval/datasets/: abstention.jsonl  factual_qa.jsonl  frames.jsonl  multilingual_qa.jsonl  multilingual_qa.sources.md
(+10 files in other folders)
