[project]
name = "wiki-eval"
version = "0.1.0"
description = "An Inspect AI evaluation suite for the Wikipedia agent."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "inspect-ai>=0.3.50",
    "wiki-agent",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv.sources]
wiki-agent = { path = "../agent", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wiki_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
